tests/paczka1/small_fuzzy/17991645.err
Error in line 2: S914 S914 18,4
Error in line 4: qI6pB A250 62,5
